<resources>
    <string name="app_name">Weather</string>
    <string name="rain">pressure</string>
    <string name="description">test</string>
    <string name="radius">°</string>
    <string name="weatherForTommorow">weather for next days :</string>
    <string name="time">Time</string>
    <string name="empty">     </string>
    <string name="city">City: </string>
    <string name="country">Country: </string>
    <string name="done">Done</string>
</resources>