<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainWeather">


    <LinearLayout
        android:layout_width="350sp"
        android:orientation="vertical"
        android:layout_height="250sp"
        android:background="@drawable/radius"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_marginTop="20sp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginEnd="6sp"
                    android:text="@string/city"
                    android:textColor="@color/greyWhite"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="200sp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:ems="10"
                    android:hint="@string/empty"
                    android:inputType="textCapWords"
                    android:text="@string/empty"
                    android:textColor="@color/greyWhite"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>
            <TableRow
                android:layout_marginTop="12sp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginEnd="6sp"
                    android:text="@string/country"
                    android:textColor="@color/greyWhite"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="200sp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:ems="10"
                    android:hint="@string/empty"
                    android:inputType="textCapWords"
                    android:text="@string/empty"
                    android:textColor="@color/greyWhite"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>
        </TableLayout>
        <Button
            android:layout_marginTop="22sp"
            android:text="@string/done"
            android:textColor="@color/black"
            android:backgroundTint="@color/greyWhite"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/buttonActivity"/>
    </LinearLayout>
</RelativeLayout>
